--- a/css/style.css
+++ b/css/style.css
@@ -84,16 +84,16 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   min-height: 100%;
+  width: 100%;
 }
 
 .header {
   background-image: linear-gradient(-31deg, #378fd9 -3%, #4ebefe 103%);
   padding: 62px 0px 72px 0px;
-  margin: 0px 0px 108px 0px;
 }
 
 .container {
-  max-width: 1230px;
+  width: 1170px;
   margin: 0 auto;
 }
 
@@ -127,8 +127,8 @@ body {
 }
 
 .header__nonstop {
-  max-width: 397px;
-  margin: 0px 0px 35px 0px;
+  width: 397px;
+  margin: 0 0 35px 0;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 27px;
@@ -148,14 +148,8 @@ body {
   font-weight: 900;
 }
 
-.main {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-}
-
 .future {
-  margin: 0px 0px 150px 0px;
+  margin: 108px 0px 150px 0px;
 }
 
 .future__h2 {
@@ -177,12 +171,12 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 0 -70px;
+  margin: 0 -15px;
 }
 
 .future__column {
   text-align: center;
-  padding: 0 70px;
+  padding: 0 15px;
 }
 
 .future__column img {
@@ -248,4 +242,73 @@ body {
   line-height: 25px;
   letter-spacing: 0.02em;
   color: #ffffff;
+}
+
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 940px;
+  }
+  .header__img {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+  }
+  .header__img img {
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .container {
+    width: 720px;
+  }
+  .future__colums {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .future__column {
+    margin: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 540px;
+  }
+  .header__body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .header__column {
+    text-align: center;
+  }
+  .header__nonstop {
+    margin: 0 auto 30px auto;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .container {
+    width: 90%;
+  }
+  .header__dream {
+    font-size: 30px;
+  }
+  .header__dream span {
+    font-size: 50px;
+  }
+  .header__moove {
+    display: block;
+    width: auto;
+  }
+  .header__nonstop,
+  .form__main,
+  .form__input,
+  .button {
+    width: 100%;
+  }
 }
